# AIM-Robotics

./: .gitignore  README.md  debug_g1_arm.py  debug_g1_loco.py  pyrightconfig.json  requirements.txt  test.py
LiDAR/: CMakeLists.txt  README.md  build_lidar.sh  g1_lidar_stream.cpp  g1_mid360_config.json  lidar_viewer.py  lidar_viewer_open3d.py
Light/: g1_head_light_sdk.py
RealSense/: README.md
RealSense/examples/: 00_check_camera.py  01_basic_capture.py  02_stream_sender.py  03_stream_receiver.py
SLAM/: README.md  viewer_realtime.py  viewer_realtime_simple.py  visualize_slam_map.py  viz_map_traj.py
SLAM/lidar_tx/: CMakeLists.txt  PROTOCOL.md  README.md  build.sh  config.json  lidar_stream.cpp
SLAM/maps/: latest
SLAM/maps/20251102_220411_lab-test/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251102_220735/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251102_222139_lab-test/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251102_222353_lab-test/: trajectory.csv
SLAM/maps/20251102_232613/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251102_234404_lab-test/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251102_235657/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251102_235708/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251102_235756_lab-test/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251102_235806/: map.pcd  run_meta.json
SLAM/maps/20251103_001508/: map.pcd  run_meta.json
SLAM/maps/20251103_001647/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_002022/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_002447/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_002654/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_002710/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_002725/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_002848/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_002909/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_003615/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_003927/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_004702/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_004736/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_005231/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_005850/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_010205/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_010441/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_010610/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_010739/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_011208/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_011346/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_011450/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_012023/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_012209/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_012553/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_012626/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_012943/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/maps/20251103_013527/: map.pcd  run_meta.json  trajectory.csv  trajectory.npy
SLAM/slam_rx/: README.md  backend.py  benchmark.py  benchmark_baseline.md  benchmark_comparison.md  benchmark_cpp.md  benchmark_py.md  build.sh  frame_builder.py  lidar_protocol.py  live_slam.py  profile_batch_api.py  profile_phase2.py  profile_pipeline.py  slam_pipeline.py
SLAM/slam_rx/cpp/: .gitignore  CMakeLists.txt
SLAM/slam_rx/cpp/include/: frame_builder_cpp.hpp  lidar_protocol_cpp.hpp
SLAM/slam_rx/cpp/src/: frame_builder_cpp.cpp  frame_builder_pybind.cpp  lidar_protocol_cpp.cpp  pybind_module.cpp
SLAM/slam_rx/docs/: batch_api_results.md  phase2_final_report.md  phase2_profiling_analysis.md  pipeline_profiling_comparison.md
SLAM/slam_rx/tests/: test_protocol.py
SLAM/slam_rx_python/: README.md  live_slam.py
YOLOv8n/: README.md  jetson_yolo_sender.py  mac_yolo_receiver.py
gpt-audio/: README.md  chatgpt_realtime_audio.py  chatgpt_realtime_audio_for_g1.py  g1_tts_say.py  requirement.txt
gpt-multimodal/: README.md  config.py  g1_realtime_multimodal.py  prompts.py
gpt-vlm/: config.py  prompts.py  requirements.txt
